vendor/ocaml/testsuite/tests/letrec-disallowed/pr7231.ml
let rec r = let rec x () = r and y () = x () in y () in r "oops";; 
